# StackPilot

./: .dockerignore  .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  README.md  config.json  deployment-create-debug.json  docker-compose.prod.yml  docker-compose.yml  envtest-cookies.txt  envtest-flow-cookies-debug.txt  login_body.json  login_headers.txt  login_test.json  me_bearer_body.json  me_cookie_body.json  phase.md  production.env.template  project-create-debug.json  project-update-debug.json  project-update.json  project.md  register-flow-debug.json  register-flow.json  register-payload.json  register_body.json  register_test.json  stack.md  vcpkg.json
.github/workflows/: ci.yml
ai-service/: Dockerfile  requirements.txt
ai-service/app/: main.py
build-mingw/: CMakeCache.txt
docs/: ai-agent.md  architecture.md  configuration.md  deployment-workflows.md  docker.md  environments-ci.md  extreme-test-cases.md  github-app.md  mcp-ide-agents.md  operations.md  production-cluster-management.md  production-self-host.md  quickstart.md  security.md  troubleshooting.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
local-projects/qa-sample/: index.html
mcp-server/: Dockerfile  README.md  package-lock.json  package.json
mcp-server/scripts/: smoke.mjs
mcp-server/src/: index.js
observability/: README.md
observability/prometheus/: prometheus.yml
observability/promtail/: config.yml
scripts/: new-production-env.ps1  new-production-env.sh
sql/migrations/: 001_create_users.sql  002_create_projects.sql  (+38 more)
src/: main.cpp
(+107 files in other folders)
